2013-02-25 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/modules/manage_network_components_form_common.php,
	godmode/massive/massive_edit_modules.php,
	include/functions_api.php: improved the form of modules the part
	of critical and warning widgets.
	
	Fixes: #3605482

2013-02-22  Sergio Martin <sergio.martin@artica.es>

	* include/functions_html.php
	include/styles/pandora.css
	include/functions_graph.php
	include/functions_events.php
	include/javascript/pandora.js
	operation/agentes/estado_generalagente.php: Improve agent view
	interface, work in hidden menus to improve more the graphs 
	layout.

2013-02-22  Sancho Lerena <slerena@artica.es>

	* include/api.php: Added a single protection on DoS attacks. 

2013-02-22  Ramon Novoa  <rnovoa@artica.es>

	* godmode/agentes/module_manager_editor_network.php,
	  include/functions_snmp_browser.php,
	  include/javascript/pandora_modules.js,
	  operation/snmpconsole/snmp_browser.php: Integrated the SNMP browser into
	  the SNMP module editor.

2013-02-22 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/alerts/alert_list.php,
	godmode/alerts/alert_list.list.php: rewrote the code for to show
	the form to add actions in the list of agents for make more pretty.
	
	Fixes: #3605462

2013-02-22  Dario Rodriguez <dario@artica.es>

        * godmode/servers/manage_recontask_form.php: Changed interval combo 
	input for new customizable combo.

	MERGED FROM 4.0.3

2013-02-21  Sergio Martin <sergio.martin@artica.es>

	* include/functions_html.php: Supress a safe_input
	in html_print_image function due performance problem

2013-02-21  Sergio Martin <sergio.martin@artica.es>

	* include/functions_events.php
	operation/events/events_list.php: Little fixes
	of new layout of events

	* include/graphs/pChart/pPie.class.php: Fixed a 
	bug of the pChart library of ugly borders in the
	3d pie graphs

2013-02-21  Sergio Martin <sergio.martin@artica.es>

	* pandoradb_data.sql
	pandoradb.data.postgreSQL.sql