@@ -1,3 +1,9 @@
+2013-02-25  Sergio Martin <sergio.martin@artica.es>
+
+	* include/functions_reports.php
+	godmode/reporting/reporting_builder.php: Fixed some interface errors on
+	reports views and other ACLs fixes
+
 2013-02-25 Miguel de Dios <miguel.dedios@artica.es>
 	
 	* godmode/modules/manage_network_components_form_common.php,
